# car-brand-recognition

./: .env.example  .gitignore  Dockerfile  README.md  app_gui.py  docker-compose.yml  download_datasets.py  inference.py  pyproject.toml  requirements.txt  train_classifier.py  train_detector.py
src/: __init__.py  config.py
